# andredanielsson.com

./: .dockerignore  .gitignore  LICENCE  README.md  default.nix  default.nix.tmp  flake.nix  fly.nix  package-lock.json  package.json  server.nix  shell.nix  website.cabal  website.nix
.github/workflows/: fly.yml  pr.yml
client/: default.nix  elm-srcs.nix  elm.json
client-pages-v3/: package-lock.json
client-pages-v3/app/: ErrorPage.elm  Shared.elm  Theme.elm  Types.elm
client-pages-v3/app/Route/: Greet.elm  Hello.elm  Index.elm
client-pages-v3/app/Route/Blog/: Slug_.elm
client/src/: Main.elm  Model.elm  Update.elm  View.elm
client/src/UI/: About.elm  Colors.elm  ExpandableItem.elm  Footer.elm  Header.elm  SideProjects.elm
server/src/: App.hs  Config.hs  Generate.hs  Main.hs
server/src/Blog/: API.hs
